# rust-hash-bench

./: Cargo.toml
src/: lib.rs
