[package]
name = "rust-hash-bench"
version = "0.1.0"
authors = ["matt"]
edition = "2018"

[dependencies]
hex = "0.4.2"
sha2 = "0.9.2"

[lib]
crate-type = ["cdylib"]
[dependencies.node-bindgen]
git = "https://github.com/infinyon/node-bindgen"
features = []
[build_dependencies.node-bindgen]
git = "https://github.com/infinyon/node-bindgen"
features = ["build"]
